--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/KeisakuHiga/SwagDAOSmartContract#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ganache-cli": "^6.7.0",
+    "mocha": "^6.2.2",
     "openzeppelin-solidity": "^2.4.0",
     "truffle-assertions": "^0.9.2",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.0.0-beta.34"
   }
 }
